<resources>
    <string name="app_name">Colección de Coches</string>

    <!--                 ACTIVITY MAIN                      -->
    <string name="btn_alta_main">Alta</string>
    <string name="btn_modificar_main">Modificar</string>
    <string name="btn_borrar_main">Borrar</string>

    <!--                 ITEM_COCHE.XML                     -->
    <string name="tv_matricula_item">Matrícula: %s</string>
    <string name="tv_modelo_item">Modelo: %s</string>
    <string name="tv_color_item">Color: %s</string>
    <string name="tv_anio_item">Fabricación: %d</string>
    <string name="tv_precio_item">Precio: %.2f</string>

    <!--                 ACTIVITY ALTA                     -->
    <string name="tv_matricula_alta">Matricula:</string>
    <string name="tv_modelo_alta">Modelo:</string>
    <string name="tv_color_alta">Color:</string>
    <string name="tv_anio_alta">Año de fabricación:</string>
    <string name="tv_precio_alta">Precio:</string>
    <string name="btn_crear_alta">Crear</string>
    <string name="btn_cancelar_alta">Cancelar</string>

    <string name="toast_error_alta">Todos los campos tiene que estar rellenados</string>
    <string name="toast_no_mod">No se ha guardado la modifcación</string>
    <string name="dialog_cancelar">Cancelar</string>
    <string name="dialog_proceder">Proceder</string>
    <string name="dialgo_mensaje_confirmación">¿Seguro que quiere proceder?</string>
    <string name="toast_error_sin_cambios">No has realizado ningún cambio</string>
    <string name="btn_borrar_alta">Eliminar</string>

    <!--                 ACTIVITY                       -->


</resources>
