<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearVItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMatriculaItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_matricula_item"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:id="@+id/linearHItem1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvModeloItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_modelo_item" />

        <TextView
            android:id="@+id/tvColorItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_color_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearHItem2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAnioItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_anio_item" />

        <TextView
            android:id="@+id/tvPrecioItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_precio_item" />
    </LinearLayout>
</LinearLayout>