<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlAlta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_layout"
    tools:context=".AltaActivity">

    <TableLayout
        android:id="@+id/tableAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMatriculaAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_matricula_alta" />

            <EditText
                android:id="@+id/etMatriculaAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvModeloAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_modelo_alta" />

            <EditText
                android:id="@+id/etModeloAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvColorAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_color_alta" />

            <EditText
                android:id="@+id/etColorAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAnioAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_anio_alta" />

            <EditText
                android:id="@+id/etAnioAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPrecioAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_precio_alta" />

            <EditText
                android:id="@+id/etPrecioAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnCrearAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="130dp"
        android:onClick="crear"
        android:text="@string/btn_crear_alta" />

    <Button
        android:id="@+id/btnCancelarAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnCrearAlta"
        android:layout_alignLeft="@+id/btnCrearAlta"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:onClick="cancelar"
        android:text="@string/btn_cancelar_alta" />


</RelativeLayout>